[gd_scene load_steps=19 format=3 uid="uid://bgve8rcbuymw6"]

[ext_resource type="Script" path="res://core/scripts/player.gd" id="1_pn054"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h0s4x"]
albedo_color = Color(0.345098, 0.678431, 0.505882, 1)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_y34r0"]

[sub_resource type="SphereMesh" id="SphereMesh_b63f8"]
radius = 0.25
height = 0.5

[sub_resource type="SphereMesh" id="SphereMesh_aqr2k"]
radius = 0.125
height = 0.25

[sub_resource type="Animation" id="Animation_dgm6a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.19209e-07, -2.68221e-07, 1.77636e-14)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character_body/MeshInstance3D:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CollisionShape3D:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CollisionShape3D:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Character_body/MeshInstance3D/eyes:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Character_body/MeshInstance3D/eyes:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("Character_body/MeshInstance3D:material_override:albedo_color")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.345098, 0.678431, 0.505882, 1)]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("Character_body:rotation")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("Hitbox:rotation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("Hitbox:position")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233)]
}

[sub_resource type="Animation" id="Animation_u3pnx"]
resource_name = "attack"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.294943, 0), Vector3(0, 0.256563, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0), Vector3(0, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.8, -0.15, -0.19), Vector3(0.81149, -0.154407, 0.22218), Vector3(0.274632, -0.154407, -1.76431)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233), Vector3(0.863408, -0.154407, -0.0233409), Vector3(0.706228, -0.154407, -1.61083)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character_body/MeshInstance3D/eyes:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0987158, 0)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.3),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233), Vector3(-0.8034, -0.154407, -0.495129), Vector3(-0.926736, -0.154407, -0.0250006)]
}

[sub_resource type="Animation" id="Animation_m6cko"]
resource_name = "backward"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, -2, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.178495, 0), Vector3(0, -0.0238028, 0), Vector3(0, 0.127656, 0)]
}

[sub_resource type="Animation" id="Animation_70ob6"]
resource_name = "forward"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 2.21914),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.161164, 0), Vector3(0, 0, 0), Vector3(0, 0.16057, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233), Vector3(0.717887, -0.154407, 0.0805628), Vector3(0.81149, -0.154407, -0.194233), Vector3(0.553089, -0.154407, -0.619385)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233), Vector3(-0.651, -0.154407, -0.608143), Vector3(-0.874774, -0.154407, 0.103192)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character_body/MeshInstance3D/eyes:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.172229, 0), Vector3(0, -0.198892, 0)]
}

[sub_resource type="Animation" id="Animation_0gtgb"]
resource_name = "idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(1.41421, 1.41421, 1.41421),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.303932, 0), Vector3(0, 0.231244, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(0.68302, 0.68302, 0.68302),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233), Vector3(0.817116, -0.154407, -0.176297), Vector3(0.81883, -0.154407, -0.450795)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5, 1.5),
"transitions": PackedFloat32Array(0.68302, 0.68302, 0.68302),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233), Vector3(-0.76045, -0.154407, -0.329421), Vector3(-0.838052, -0.154407, -0.0808506)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(0.68302),
"update": 0,
"values": [Vector3(-1.19209e-07, -2.68221e-07, 1.77636e-14)]
}

[sub_resource type="Animation" id="Animation_qff02"]
resource_name = "run_backward"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0, 0.4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character_body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.20944, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233), Vector3(0.81149, -0.44568, -0.241514)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233), Vector3(-0.772718, -0.386258, -0.023348)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Character_body/MeshInstance3D/eyes:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.171723, 0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Character_body/MeshInstance3D/eyes:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0540711, -0.066144)]
}

[sub_resource type="Animation" id="Animation_buyrn"]
resource_name = "run_forward"
length = 0.3
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, 0.00474, -0.256252)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Character_body/MeshInstance3D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(-0.286635, 0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CollisionShape3D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CollisionShape3D:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, 0, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D3:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0.81149, -0.154407, -0.194233), Vector3(0.81149, -0.317801, 0.360111)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(-0.772718, -0.154407, -0.194233), Vector3(-0.772718, -0.310219, 0.334386)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("Character_body/MeshInstance3D/MeshInstance3D4:rotation")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(-1.78814e-07, -2.68221e-07, 1.42108e-14)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("Character_body/MeshInstance3D/eyes:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0.301261, 0, 0)]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("Character_body/MeshInstance3D/eyes:position")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector3(0, 0, 0), Vector3(0, -0.0725528, -0.153093)]
}

[sub_resource type="Animation" id="Animation_qch0x"]
resource_name = "step_left"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.345098, 0.678431, 0.505882, 1), Color(0.815686, 0.443137, 0.74902, 1), Color(0.345098, 0.678431, 0.505882, 1)]
}

[sub_resource type="Animation" id="Animation_ygex1"]
resource_name = "step_right"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Character_body/MeshInstance3D:material_override:albedo_color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.345098, 0.678431, 0.505882, 1), Color(0.964706, 0.235294, 0.505882, 1), Color(0.345098, 0.678431, 0.505882, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dpwx4"]
_data = {
"RESET": SubResource("Animation_dgm6a"),
"attack": SubResource("Animation_u3pnx"),
"backward": SubResource("Animation_m6cko"),
"forward": SubResource("Animation_70ob6"),
"idle": SubResource("Animation_0gtgb"),
"run_backward": SubResource("Animation_qff02"),
"run_forward": SubResource("Animation_buyrn"),
"step_left": SubResource("Animation_qch0x"),
"step_right": SubResource("Animation_ygex1")
}

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_0lrfu"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_gnrvl"]
radius = 0.6
height = 2.1

[sub_resource type="SphereShape3D" id="SphereShape3D_q6vm4"]
radius = 0.2836

[node name="Player" type="CharacterBody3D" groups=["Player"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.01531, 0)
collision_layer = 2
collision_mask = 5
script = ExtResource("1_pn054")

[node name="Character_body" type="Node3D" parent="."]
transform = Transform3D(0.999999, 0, 0, 0, 1, 0, 0, 0, 0.999999, 0, 0, 0)

[node name="MeshInstance3D" type="MeshInstance3D" parent="Character_body"]
material_override = SubResource("StandardMaterial3D_h0s4x")
mesh = SubResource("CapsuleMesh_y34r0")
skeleton = NodePath("../..")
metadata/_edit_group_ = true

[node name="MeshInstance3D3" type="MeshInstance3D" parent="Character_body/MeshInstance3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.81149, -0.154407, -0.194233)
mesh = SubResource("SphereMesh_b63f8")

[node name="MeshInstance3D4" type="MeshInstance3D" parent="Character_body/MeshInstance3D"]
transform = Transform3D(1, 1.42108e-14, -2.68221e-07, 1.77636e-14, 1, 1.19209e-07, 2.68221e-07, -1.19209e-07, 1, -0.772718, -0.154407, -0.194233)
mesh = SubResource("SphereMesh_b63f8")

[node name="eyes" type="Node3D" parent="Character_body/MeshInstance3D"]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Character_body/MeshInstance3D/eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.203007, 0.486512, -0.422704)
mesh = SubResource("SphereMesh_aqr2k")
skeleton = NodePath("../..")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="Character_body/MeshInstance3D/eyes"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.220318, 0.486512, -0.422704)
mesh = SubResource("SphereMesh_aqr2k")
skeleton = NodePath("../..")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Character_body"]
root_node = NodePath("../..")
libraries = {
"": SubResource("AnimationLibrary_dpwx4")
}

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("CapsuleShape3D_0lrfu")

[node name="Camera_controller" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.752041, -0.025051)
metadata/_edit_group_ = true

[node name="SpringArm3D" type="SpringArm3D" parent="Camera_controller"]
transform = Transform3D(1, 0, 0, 0, 1, 0.000436336, 0, -0.000436336, 1, 0, 0, 0)
spring_length = 5.0
margin = 0.1

[node name="RemoteTransform3D" type="RemoteTransform3D" parent="Camera_controller/SpringArm3D"]

[node name="Hurtbox" type="Area3D" parent="." groups=["playerHurtbox"]]
collision_layer = 2
collision_mask = 5

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hurtbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0460602, 0)
shape = SubResource("CapsuleShape3D_gnrvl")

[node name="Hitbox" type="Area3D" parent="." groups=["playerHitbox"]]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.81149, -0.154407, -0.194233)
collision_layer = 2
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Hitbox"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0170192, 0)
shape = SubResource("SphereShape3D_q6vm4")

[connection signal="area_entered" from="Hurtbox" to="." method="_on_hurtbox_area_entered"]
